--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.11.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.9"
   }
 }
